--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background-color: #2da9d3;
+    background-color: #202326;
     color: #0c0b0b;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 16px;
@@ -24,11 +24,13 @@ body{
 }
 
 #form-box{
-    background-color: rgb(0, 255, 170);
+    background-color: rgb(131, 118, 231);
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: left;
+    text-align: center;
+    border-radius: 30px;
     height: 500px;
     width: 500px;
     box-shadow: rgba(18, 18, 35, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
@@ -81,11 +83,13 @@ body{
 
 #table-box{
     margin : 0 20px;
-    background-color: rgb(251, 167, 255);
+    background-color: #1a8d8d;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: left;
+    text-align: center;
+    border-radius:20px;
     height: 500px;
     width: 800px;
     box-shadow: rgba(62, 172, 78, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
